# TrendChain-AI

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
crypto_pulse/: __init__.py  config.py  fallback.py  llm.py  models.py  pipeline.py  sample_data.py  scoring.py
crypto_pulse/collectors/: __init__.py  base.py  coingecko.py  hackernews.py  news.py  reddit.py  youtube.py
data/: sample_data.json
tests/: test_llm.py  test_pipeline.py  test_scoring.py
