[project]
name = "crypto-pulse-ai"
version = "0.1.0"
description = "AI-powered crypto trend analyzer and content idea generator"
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.74.0",
  "feedparser>=6.0.11",
  "pandas>=2.2.0",
  "plotly>=5.24.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

